Adding test for jetty.conf
Signed-off-by: Joakim Erdfelt <joakim.erdfelt@gmail.com>